welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:11: error: ';' expected but 'else' found.
      if (x==0) {y=y+1} else {y=y-1} else {x=x+1;
                                     ^